# unlook-standalone

./: .gitignore  AMBIENT_LIGHT_MODE_FEATURE.md  AMBIENT_SGBM_FIXES.md  AMBIENT_SUBTRACTION_FIX.md  ARCHITECTURE_DIAGRAM.txt  ARTEC_ALGORITHMS_ANALYSIS.md  AS1170_DEBUG_SYSTEM_SUMMARY.md  AS1170_DUAL_VCSEL_IMPLEMENTATION_SUMMARY.md  BBOX_PARSING_FIX.md  BUILD_VERIFICATION_REPORT.md  CALIBRATION_DOCUMENTATION_SUMMARY.md  CALIBRATION_GUI_COMPLETE_SUMMARY.md  CALIBRATION_GUI_IMPLEMENTATION_SUMMARY.md  CALIBRATION_RESEARCH_FINDINGS.md  CAMERA_LED_CALIBRATION_INTEGRATION.md  CAMERA_SYNC_SOLUTION.md  CAMERA_SYSTEM.md  CLAUDE.md  CMAKE_INTEGRATION_REPORT.md  CMakeLists.txt  CMakeLists_Qt.txt  CONE_ARTIFACT_FIX.md  COVERAGE_TRACKING_IMPLEMENTATION.md  CPackConfig.cmake  CPackSourceConfig.cmake  CRITICAL_AD_CENSUS_DEBUG.md  DEFINITIVE_GESTURE_SOLUTIONS.md  DEMO_STATUS_ANALYSIS.md  DEPTH_PRECISION_ANALYSIS.md  DIAGNOSIS_CURRENT_POINT_CLOUD.md  DIRECT_DISPARITY_FIX.md  DUAL_VCSEL_QUICK_REFERENCE.md  Doxyfile  FRAME_AVERAGING_IMPLEMENTATION.md  FUTURE_OPTIMIZATIONS.md  GESTURE_DETECTION_OPTIMIZATION.md  GESTURE_RECOGNITION_RESEARCH.md  GUI_EXPORT_FOR_DESIGN.json  GUI_INTEGRATION_PATCH.cpp  HANDHELD_SCAN_PIPELINE_IMPLEMENTATION.md  (+136 more)
build_test/: unlook.pc  (+3 more)
examples/: CMakeLists.txt  GESTURE_TEST_README.md  basic_api_example.cpp  bmi270_stability_example.cpp  c_api_example.c  calibration_validation_example.cpp  camera_example.cpp  camera_test.cpp  camera_test_old.cpp  depth_processing_example.cpp  gesture_test.cpp  gesture_test_camera.cpp  gesture_test_simple.cpp  point_cloud_generation_example.cpp  stereo_calibration_example.cpp  stereo_performance_test.cpp  temporal_stereo_example.cpp  test_dual_vcsel_temporal.cpp  test_stereo_calibration.cpp  test_vcsel_stereo.cpp  vcsel_depth_capture_example.cpp
src/: CMakeLists.txt  main.cpp  unlook.h  unlook.pc.in
src/api/: HandheldScanPipeline.cpp  HandheldScanPipeline_NEW.cpp  calibration_manager.cpp  camera_system.cpp  depth_processor.cpp  unlook_scanner.cpp  vcsel_control.cpp
src/calibration/: BoofCVWrapper.cpp  CMakeLists.txt  CalibrationLoader.cpp  CalibrationManager.cpp  CalibrationValidation.cpp  CalibrationValidator.cpp  PatternDetector.cpp  StereoCalibrationProcessor.cpp  StereoRectifier.cpp
src/camera/: AutoExposure.cpp  CMakeLists.txt  CameraDevice.cpp  CameraSynchronizer.cpp  CameraSystem.cpp  CameraUtils.cpp  HardwareSyncCapture.cpp  HardwareSyncManager.cpp  LibcameraSyncDevice.cpp  RawCameraInterface.cpp  SynchronizedCameraSystem.cpp  camera_system.cpp  camera_system.cpp.backup
src/core/: CMakeLists.txt  Configuration.cpp  Logger.cpp  QtLogHandler.cpp  Timer.cpp  config.cpp  config_manager.cpp  exception.cpp  types.h
src/face/: ARM64PerformanceOptimizer.cpp  BankingComplianceValidator.cpp  BankingMLValidator.cpp  CMakeLists.txt  Face3DReconstructor.cpp  FaceMatcher.cpp  FaceTypes.cpp  FacialPointCloudProcessor.cpp  FacialRecognitionSystem.cpp  LandmarkExtractor.cpp  MLFeatureExtractor.cpp  MLTemplateManager.cpp  SecureTelemetryLogger.cpp  SupernovaMLClient.cpp
src/gesture/: CMakeLists.txt  GeometricSwipeDetector.cpp  GestureRecognitionSystem.cpp  HandDetector.cpp  HandLandmarkExtractor.cpp  HandTracker.cpp  MediaPipeWrapper.cpp  MotionBlurCompensation.cpp  TemporalBuffer.cpp  mediapipe_backend.py
src/gui/: CMakeLists.txt  as1170_debug_dialog.cpp  board_options_dialog.cpp  calibration_widget.cpp  camera_preview_widget.cpp  dataset_capture_widget.cpp  dataset_capture_widget.cpp.bak2  dataset_processing_widget.cpp  depth_test_widget.cpp  face_enrollment_widget.cpp  gesture_widget.cpp  handheld_scan_widget.cpp  handheld_scan_widget.ui  main_window.cpp  options_widget.cpp  swipe_gesture_detector.cpp  unlook_scanner.pro  unlook_scanner.pro.qtds  unlook_scanner.qbs
src/gui/resources/: gui_resources.qrc  styles.qrc
src/gui/styles/: display_metrics.cpp  supernova_style.cpp
src/gui/ui/: as1170_debug_dialog.ui  board_options_dialog.ui  camera_preview_widget.ui  dataset_capture_widget.ui  depth_test_widget.ui  face_enrollment_widget.ui  gesture_widget.ui  handheld_scan_widget.ui  main_window.ui  options_widget.ui
src/hardware/: AS1170Controller.cpp  AS1170DualVCSELController.cpp  BMI270Driver.cpp  CMakeLists.txt  LEDSyncManager.cpp  LEDThermalManager.cpp  StabilityDetector.cpp  StructuredLightSystem.cpp  VCSELProjector.cpp
src/mesh/: CMakeLists.txt  IndustrialMeshExporter.cpp  MeshCleaner.cpp  MeshOptimizer.cpp  MeshValidator.cpp  PoissonReconstructor.cpp
src/pointcloud/: CMakeLists.txt  MeshCleaner.cpp  PointCloudProcessor.cpp  PoissonReconstructor.cpp
src/realtime/: BayerNEON.cpp  RealtimePipeline.cpp  RealtimePipeline.hpp
src/stereo/: BoofCVStereoMatcher.cpp  CMakeLists.txt  CensusStereoMatcher.cpp  DebugOutputManager.cpp  DepthConverter.cpp  DepthProcessor.cpp  DepthProcessor_optimized.cpp  DisparityComputer.cpp  DisparityFilter.cpp  HoleFiller.cpp  MedianFilter.cpp  ParameterManager.cpp  PointCloudGenerator.cpp  ProgressiveStereoMatcher.cpp  RawStereoProcessor.cpp  RectificationEngine.cpp  SGBMStereoMatcher.cpp  SGBMStereoMatcherRealtime.cpp  SGMCensus.cpp  SGMCensusOptimized.cpp  SGM_NEON.cpp  SpatialFilter.cpp  StereoMatcher.cpp  TemporalFilter.cpp  TemporalStereoProcessor.cpp  VCSELStereoMatcher.cpp  VulkanSGMAccelerator.cpp  depth_processor.cpp
src/utils/: FileUtils.cpp  ImageUtils.cpp  MathUtils.cpp  TimingUtils.cpp
src/validation/: CMakeLists.txt  CalibrationValidator.cpp  DepthValidator.cpp  EpipolarValidator.cpp
test_offline_scan/: CMakeLists.txt  README.md  build.sh  reference_sgm_census.cpp  run.sh  test_offline_scan.cpp
tests/: CMakeLists.txt  DELIVERABLES.md  TEST_REPORT.md  benchmark_realtime_pipeline.cpp  test_calibration.cpp  test_file_logger.cpp  test_handheld_integration.cpp  test_handheld_pipeline.cpp  test_stability_detector.cpp  test_stereo_matching.cpp  test_temporal_stereo.cpp  test_vcsel_raw_pipeline.cpp  test_vcsel_stereo_unit.cpp
tests/benchmarks/: handheld_performance_benchmark.cpp
tests/hardware/: CMakeLists.txt
tests/mesh/: test_complete_pipeline.cpp
tests/unit/: CMakeLists.txt
(+212 files in other folders)
